test/visibility/import/edgeCases/dontLeakSymbols2-proc.good
dontLeakSymbols2-proc.chpl:19: In function 'main':
dontLeakSymbols2-proc.chpl:20: error: cannot access 'foo' as it is private to 'C'
